syntax = "proto3";

package microservice;

// Example service definition
// Replace with your actual service definitions

service ExampleService {
  // Get example by ID
  rpc GetExample (GetExampleRequest) returns (ExampleResponse);

  // Create new example
  rpc CreateExample (CreateExampleRequest) returns (ExampleResponse);

  // List examples
  rpc ListExamples (ListExamplesRequest) returns (ListExamplesResponse);
}

message GetExampleRequest {
  int32 id = 1;
}

message CreateExampleRequest {
  string name = 1;
}

message ExampleResponse {
  int32 id = 1;
  string name = 2;
  string created_at = 3;
  string updated_at = 4;
}

message ListExamplesRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListExamplesResponse {
  repeated ExampleResponse examples = 1;
  int32 total = 2;
}
